// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`stub mode > bundle stub > should create .d.mts stub for types 1`] = `
"## index.d.mts

\`\`\`ts
export * from "../index.ts";
\`\`\`

## index.mjs

\`\`\`js
export * from "../index.ts";
\`\`\`
"
`;

exports[`stub mode > bundle stub > should create stub file that re-exports source 1`] = `
"## index.d.mts

\`\`\`ts
export * from "../index.ts";
\`\`\`

## index.mjs

\`\`\`js
export * from "../index.ts";
\`\`\`
"
`;

exports[`stub mode > bundle stub > should handle default export in stub 1`] = `
"## index.d.mts

\`\`\`ts
export * from "../index.ts";
export { default } from "../index.ts";
\`\`\`

## index.mjs

\`\`\`js
export * from "../index.ts";
export { default } from "../index.ts";
\`\`\`
"
`;

exports[`stub mode > bundle stub > should make stub executable when source has shebang 1`] = `
"## cli.d.mts

\`\`\`ts
export * from "../cli.ts";
\`\`\`

## cli.mjs

\`\`\`js
#!/usr/bin/env node
export * from "../cli.ts";
\`\`\`
"
`;

exports[`stub mode > bundle stub > should preserve shebang in stub file 1`] = `
"## cli.d.mts

\`\`\`ts
export * from "../cli.ts";
\`\`\`

## cli.mjs

\`\`\`js
#!/usr/bin/env node
export * from "../cli.ts";
\`\`\`
"
`;

exports[`stub mode > stub uses relative paths > should use relative path in re-export 1`] = `
"## index.d.mts

\`\`\`ts
export * from "../index.ts";
\`\`\`

## index.mjs

\`\`\`js
export * from "../index.ts";
\`\`\`
"
`;

exports[`stub mode > stub with multiple entries > should create stubs for multiple entries 1`] = `
"## index.d.mts

\`\`\`ts
export * from "../index.ts";
\`\`\`

## index.mjs

\`\`\`js
export * from "../index.ts";
\`\`\`

## utils.d.mts

\`\`\`ts
export * from "../utils.ts";
\`\`\`

## utils.mjs

\`\`\`js
export * from "../utils.ts";
\`\`\`
"
`;
